--- a/index.html
+++ b/index.html
@@ -367,12 +367,10 @@
     </h2>
 
     <div class="flex flex-wrap justify-center items-center gap-16">
-      <img src="images/logos/logo_uber-cornershop2.png"
-           class="h-12 opacity-50 transition-opacity duration-300 hover:opacity-100"
-           alt="Logo Uber">
-
+      <img src="images/logos/logo_btgconsulting.png" alt="Logo BTG Consulting"
+           class="h-12 opacity-50 transition-opacity duration-300 hover:opacity-100">
       <img src="images/logos/logo_municonce.png" alt="Logo Municipalidad de Concepción"
-           class="h-12 opacity-50 transition-opacity duration-300 hover:opacity-100"">
+           class="h-12 opacity-50 transition-opacity duration-300 hover:opacity-100">
       <img src="images/logos/logo_copec.png" alt="Logo Copec"
            class="h-12 opacity-50 transition-opacity duration-300 hover:opacity-100">
       <img src="images/logos/logo_udec.png" alt="Logo Universidad de Concepción"
@@ -385,7 +383,9 @@
            class="h-12 opacity-50 transition-opacity duration-300 hover:opacity-100">
       <img src="images/logos/logo_woodtechms.png" alt="Logo WoodtechMS"
            class="h-12 opacity-50 transition-opacity duration-300 hover:opacity-100">
-
+      <img src="images/logos/logo_uber-cornershop2.png"
+           class="h-12 opacity-50 transition-opacity duration-300 hover:opacity-100"
+           alt="Logo Uber">
     </div>
   </div>
 </section>
