add logo masjubilaciones.cl

--- a/index.html
+++ b/index.html
@@ -381,6 +381,8 @@
            class="h-12 opacity-50 transition-opacity duration-300 hover:opacity-100">
       <img src="images/logos/logo_ucsc.png" alt="Logo MCI Electronics"
            class="h-12 opacity-50 transition-opacity duration-300 hover:opacity-100">
+      <img src="images/logos/logo_masjubilaciones.png" alt="Logo Masjubilaciones"
+           class="h-12 opacity-50 transition-opacity duration-300 hover:opacity-100">
       <img src="images/logos/logo_woodtechms.png" alt="Logo WoodtechMS"
            class="h-12 opacity-50 transition-opacity duration-300 hover:opacity-100">
       <img src="images/logos/logo_uber-cornershop2.png"
