--- a/index.html
+++ b/index.html
@@ -377,11 +377,11 @@
            class="h-12 opacity-50 transition-opacity duration-300 hover:opacity-100">
       <img src="images/logos/logo_cefop.png" alt="Logo Centro de Óptica y Fotónica"
            class="h-12 opacity-50 transition-opacity duration-300 hover:opacity-100">
+      <img src="images/logos/logo_masjubilaciones.png" alt="Logo Masjubilaciones"
+           class="h-12 opacity-50 transition-opacity duration-300 hover:opacity-100">
       <img src="images/logos/logo_mci.png" alt="Logo MCI Electronics"
            class="h-12 opacity-50 transition-opacity duration-300 hover:opacity-100">
-      <img src="images/logos/logo_ucsc.png" alt="Logo MCI Electronics"
-           class="h-12 opacity-50 transition-opacity duration-300 hover:opacity-100">
-      <img src="images/logos/logo_masjubilaciones.png" alt="Logo Masjubilaciones"
+      <img src="images/logos/logo_ucsc.png" alt="Logo Universidad Católica de la Santísima Concepción"
            class="h-12 opacity-50 transition-opacity duration-300 hover:opacity-100">
       <img src="images/logos/logo_woodtechms.png" alt="Logo WoodtechMS"
            class="h-12 opacity-50 transition-opacity duration-300 hover:opacity-100">
