--- a/index.html
+++ b/index.html
@@ -29,25 +29,27 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.0/css/all.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <style>
-      @import url('https://fonts.googleapis.com/css2?family=SF+Pro+Display:wght@100;200;300;400;500;600;700;800;900&family=SF+Pro+Text:wght@100;200;300;400;500;600;700;800;900&display=swap');
-
+      @import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@300;400;500;600;700;800;900&display=swap');
+      @import url('https://fonts.googleapis.com/css2?family=Average+Sans:wght@300;400;500;600;700;800;900&display=swap');
+      @import url('https://fonts.googleapis.com/css2?family=Play:wght@300;400;500;600;700;800;900&display=swap');
+      @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300;400;500;600;700;800;900&display=swap');
       body {
-          font-family: 'SF Pro Text', -apple-system, BlinkMacSystemFont, sans-serif;
+          font-family: 'Red Hat Display', -apple-system, BlinkMacSystemFont, sans-serif;
           -webkit-font-smoothing: antialiased;
           -moz-osx-font-smoothing: grayscale;
       }
 
-      .font-display {
-          font-family: 'SF Pro Display', -apple-system, BlinkMacSystemFont, sans-serif;
-      }
+      /*.font-display {*/
+      /*    font-family: 'Red Hat Display', -apple-system, BlinkMacSystemFont, sans-serif;*/
+      /*}*/
 
       .font-text {
-          font-family: 'SF Pro Text', -apple-system, BlinkMacSystemFont, sans-serif;
+          font-family: 'JetBrains Mono', 'Red Hat Display', -apple-system, BlinkMacSystemFont, sans-serif;
       }
 
       h1, h2, h3, h4, nav {
-          font-family: 'SF Pro Display', -apple-system, BlinkMacSystemFont, sans-serif;
-          letter-spacing: -0.02em;
+          font-family: 'Play', 'Red Hat Display', -apple-system, BlinkMacSystemFont, sans-serif;
+          /*letter-spacing: -0.02em;*/
       }
 
       @keyframes gradient {
@@ -269,7 +271,7 @@
     <circle cx="50" cy="50" r="30" stroke="currentColor" stroke-width="0.5" />
   </svg>
 
-  <div class="max-w-4xl mx-auto text-center z-10 relative" data-aos="fade-up">
+  <div class="max-w-4xl mx-auto text-center z-10 relative flex flex-col justify-start" data-aos="fade-up">
     <h1 class="text-5xl md:text-6xl font-display font-light text-white tracking-tight leading-none mb-8">
       <span class="font-medium">Soluciones tecnológicas</span>
       <span class="block mt-3 font-medium text-transparent bg-clip-text bg-gradient-to-r from-blue-400 to-sky-400">
@@ -291,7 +293,7 @@
     </a>
 
     <!-- Scroll indicator -->
-    <div class="absolute bottom-12 left-1/2 transform -translate-x-1/2 flex flex-col items-center">
+    <div class="absolute bottom-12 left-1/2 transform -translate-x-1/2 flex flex-col items-center  w-12 h-12 bg-white/10 rounded-full z-10">
       <span class="text-white/40 text-xs tracking-widest mb-2 font-light">DESCUBRIR</span>
       <svg class="w-5 h-10 text-white/40" viewBox="0 0 20 40" fill="none" xmlns="http://www.w3.org/2000/svg">
         <rect x="9" y="0" width="2" height="40" rx="1" fill="currentColor" opacity="0.2" />
@@ -329,7 +331,7 @@
       <div class="flex flex-col md:flex-row items-start gap-16">
         <div class="md:w-1/3 flex-shrink-0">
           <h3 class="text-3xl font-display font-light text-white mb-6 tracking-tight">
-            <span class="text-blue-400 font-normal">Soluciones</span> de Electro-Informática
+            <span class="text-blue-400 font-normal">Electro</span>Informática
           </h3>
 
           <!-- SVG Icon -->
