--- a/index.html
+++ b/index.html
@@ -312,8 +312,8 @@
   <div class="max-w-5xl mx-auto z-10 relative flex flex-col items-center justify-center" data-aos="fade-up">
     <div class="text-center mb-16">
       <h1 class="text-5xl md:text-7xl font-light text-slate-100 tracking-tight leading-none mb-6">
-        <span class="text-transparent bg-clip-text bg-gradient-to-r from-white to-white via-amber-400 block mb-2">Soluciones tecnológicas</span>
-        <span class="text-transparent bg-clip-text bg-gradient-to-r from-white to-amber-500">
+        <span class="text-transparent bg-clip-text bg-gradient-to-r from-white to-white via-sky-300 block mb-2">Soluciones informáticas</span>
+        <span class="text-transparent bg-clip-text bg-gradient-to-r from-white to-yellow-300">
           a medida
         </span>
       </h1>
@@ -601,7 +601,7 @@
   <div class="max-w-6xl mx-auto px-6 relative z-10">
     <div class="text-center mb-24">
       <h2 class="text-4xl md:text-6xl font-light tracking-tight text-slate-100 mb-6">
-        <span class="text-transparent bg-clip-text bg-gradient-to-r from-white to-slate-500">
+        <span class="text-transparent bg-clip-text bg-gradient-to-r from-sky-200 to-white via-white">
           ¿Tiene un Desafío Tecnológico?
         </span>
       </h2>
