- Removed unnecessary empty line in contact section's HTML. - Adjusted success message for improved clarity and user guidance.

--- a/index.html
+++ b/index.html
@@ -617,7 +617,6 @@
         <h3 class="text-2xl md:text-3xl font-light text-white mb-10 tracking-tight">
           Iniciar una Conversación
         </h3>
-
         <form id="softwarebiobio-contacto" netlify class="space-y-8">
           <div>
             <label for="name" class="block text-sm font-light mb-2 text-slate-300/60 tracking-tight">Nombre</label>
@@ -973,7 +972,7 @@
 
     const messages = {
       error: 'Hubo un error al enviar su mensaje. Por favor envíenos un email a contacto@softwarebiobio.com como alternativa.',
-      success: 'Hemos recibido su mensaje y responderemos lo antes posible desde contacto@softwarebiobio.com. Por favor revise si su carpeta de SPAM ha filtrado nuestra respuesta dentro de las próximas 48 a 72 horas. Muchas gracias.'
+      success: 'Hemos recibido su mensaje y responderemos lo antes posible desde contacto@softwarebiobio.com.  Si no ha recibido respuesta nuestra en 3 días, sugerimos confirmar si su servidor o gestor de correo electrónico no haya erróneamente filtrado nuestra respuesta como Spam.</div>.'
     }
 
     try {
