Reorder text and style for improved readability in commitment section.

--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@
     <div class="mt-40 text-center">
       <div class="bg-slate-950/30 backdrop-blur-sm rounded-xl p-16 border border-slate-700/5 transition-all duration-300 hover:border-slate-400/10 max-w-4xl mx-auto">
         <h3 class="text-3xl md:text-4xl font-light text-slate-100 mb-6 tracking-tight">
-          Nuestro Compromiso: <span class="text-transparent bg-clip-text bg-gradient-to-r from-slate-400 to-slate-500">Responsabilidad Integral</span>
+          <span class="text-transparent bg-clip-text bg-gradient-to-r from-slate-400 to-slate-500">Nuestro Compromiso:</span> Responsabilidad Integral
         </h3>
 
         <p class="text-slate-300/60 font-light text-xl max-w-3xl mx-auto leading-relaxed mb-16">
