Adjust paragraph font size for better responsiveness.

--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
         </span>
       </h1>
 
-      <p class="text-xl md:text-2xl text-slate-300/70 max-w-3xl mx-auto leading-relaxed font-light mb-16">
+      <p class="text-base md:text-lg lg:text-xl text-slate-300/70 max-w-3xl mx-auto leading-relaxed font-light mb-16">
         Somos una consultora de desarrollo con más de 15 años de experiencia, especializada en proyectos de
         electro-informática, telemetría y aplicaciones web de distinto tipo.
       </p>
