Simplify success message text for contact form.

--- a/index.html
+++ b/index.html
@@ -934,7 +934,7 @@
 
     const messages = {
       error: 'Hubo un error al enviar su mensaje. Por favor envíenos un email a contacto@softwarebiobio.com como alternativa.',
-      success: 'Hemos recibido su mensaje y responderemos lo antes posible desde <strong>contacto@softwarebiobio.com</strong>.  Si no ha recibido respuesta nuestra en 3 días, sugerimos confirmar si su servidor o gestor de correo electrónico no haya erróneamente filtrado nuestra respuesta como Spam.'
+      success: 'Su mensaje ha sido enviado. Responderemos desde contacto@softwarebiobio.com. Sugerimos confirmar si su servidor o gestor de correo electrónico no haya filtrado erróneamente nuestra respuesta como Spam.'
     }
 
     try {
