--- a/index.html
+++ b/index.html
@@ -964,7 +964,7 @@
     } catch (error) {
       console.error('Error al enviar el mensaje:', error)
       modalMessage.textContent = messages.error
-      modalMessage.className = 'text-amber-600'
+      modalMessage.className = 'text-amber-400 mb-4'
     } finally {
       submitButton.disabled = false
       submitButton.innerHTML = `
