Enhance company description text with added specificity.

--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
       </h1>
 
       <p class="text-base md:text-lg lg:text-xl text-slate-300/70 max-w-3xl mx-auto leading-relaxed font-light mb-16">
-        Somos una consultora de desarrollo con más de 15 años de experiencia, especializada en proyectos de
+        Somos una consultora de desarrollo con más de 15 años de experiencia profesional en la industria, especializada en proyectos de
         electro-informática, telemetría y aplicaciones web de distinto tipo.
       </p>
 
