- Improve header design with adjusted opacity and modified padding for medium screens - Enhance accessibility by adding icons and adjusting hover animations - Extend utility class support in CSS: new spacing, transform, and display properties added

--- a/index.html
+++ b/index.html
@@ -196,8 +196,8 @@
   </svg>
 </div>
 
-<header class="fixed w-full z-50 text-slate-100 bg-slate-800/80 dark:bg-slate-900/80 backdrop-blur-md border-b border-slate-700/5">
-  <nav class="container text-transparent mx-auto px-8 py-5 flex justify-between items-center" role="navigation" aria-label="Main">
+<header class="fixed w-full z-50 text-slate-100 bg-slate-800/50 dark:bg-slate-900/80 backdrop-blur border-b border-slate-700/5">
+  <nav class="container text-transparent mx-auto px-8 py-5 md:p-0 flex justify-between items-center" role="navigation" aria-label="Main">
     <a href="#intro"
        class="text-sm md:text-md xl:text-xl font-medium tracking-tight bg-clip-text bg-gradient-to-t from-white to-slate-400 "
        aria-label="Inicio">
@@ -249,9 +249,9 @@
         <a href="#contact"
            class="py-2 px-1 relative font-light text-sm md:text-md xl:text-lg text-slate-300 hover:text-slate-100 transition-colors duration-300"
            role="menuitem" aria-label="Ir a la sección de contacto">
-           <span class="relative">
+           <span class="relative flex items-center gap-2">
+             <i class="fa-solid fa-envelope text-slate-300/80 text-base" aria-hidden="true"></i>
              Contacto
-        
            </span>
         </a>
       </li>
@@ -344,10 +344,10 @@
         electro-informática, telemetría y aplicaciones web de distinto tipo.
       </p>
 
-      <a href="#contact" role="button" class="button inline-block px-12 py-5 bg-slate-500/10 backdrop-blur-sm rounded-full border border-slate-400/20 transition-all duration-300 hover:bg-slate-500/20 hover:border-slate-400/40 animate">
+      <a href="#contact" role="button" class="button inline-block px-12 py-5 bg-slate-500/10 backdrop-blur-sm rounded-full border border-slate-400/20 transition-all duration-300 hover:bg-slate-500/20 hover:border-slate-400/40">
           <span class="text-slate-400 font-light text-sm tracking-wide">
             INICIAR UNA CONVERSACIÓN
-            <i class="fa fa-rocket text-slate-300/80 animate-bounce" aria-hidden="true"></i>
+            <i class="fa fa-rocket text-slate-300/80 hover:animate-bounce" aria-hidden="true"></i>
           </span>
       </a>
     </div>
